--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ash_wrap"
+name = "ash-urn"
 version = "0.1.0"
 authors = ["Lars Helge Scheel <larshelge.scheel@gmail.com>"]
 edition = "2018"
