Still working on ash base, now there is an example that uses sdl2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 #ash       = "0.29.0" Doesn't have 1.2 support
 ash        = { git = "https://github.com/MaikKlein/ash.git", branch = "master" }
 
+[dev-dependencies]
+sdl2      = "0.32"
