--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ image     = "0.23.0-preview.0"
 gltf      = { version = "0.15.2", features = ["utils"] }
 sdl2      = "0.32"
 cgmath    = "0.17.0"
+itertools = "0.9.0"
