--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ image     = "0.23.0-preview.0"
 
 [dev-dependencies]
 gltf      = { version = "0.15.2", features = ["utils"] }
-sdl2      = "0.32"
+#sdl2      = "0.32"
+fermium   = "200.12.1"
 cgmath    = "0.17.0"
 itertools = "0.9.0"
